Fix image position small down to use scss

--- a/src/components/ImageText/ImageText.scss
+++ b/src/components/ImageText/ImageText.scss
@@ -62,6 +62,10 @@
         transform: translate(0, 0) !important;
       }
 
+      @media ($small-down) {
+        transform: translate(0, 0) !important;
+      }
+
       @media ($medium-up) {
         order: 1;
         align-self: flex-end;
